--- a/configs/config-default.conf
+++ b/configs/config-default.conf
@@ -7,7 +7,7 @@ ARMBIAN_BRANCH="v24.08"
 # Read build script documentation https://docs.armbian.com/Developer-Guide_Build-Options/
 # for detailed explanation of these options and for additional options not listed here
 
-KERNEL_CONFIGURE="yes" # leave empty to select each time, set to "yes" or "no" to skip dialog prompt
+KERNEL_CONFIGURE="no" # leave empty to select each time, set to "yes" or "no" to skip dialog prompt
 CLEAN_LEVEL=""      # comma-separated list of clean targets:
 :                   # --> "make-atf" = make clean for ATF, if it is built.
 :                   # --> "make-uboot" = make clean for uboot, if it is built.
